@@ -15,6 +15,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk, 6.1-dev, future 6.2): 
 ------------------------------------------------- 
 
+- Union layer: Fixed the crash when styling source layers using attributes (#3870)
+
 - Added GEOS difference operator to expression support (#3871) 
 
 Version 6.0.0 (2011-05-11)
